<resources>
    <string name="app_name">OneBible</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="defaultTranslation">kjv</string>

    <!-- Main page -->
    <string name="main_books">Books</string>
    <string name="main_startreading">Start reading</string>
    <string name="main_continuereading">Continue reading</string>
    <string name="main_bookmarks">Bookmarks</string>
    <string name="main_search">Search</string>
    <string name="main_search_detail">Search for texts in the Bible</string>
    <string name="main_settings">Settings</string>
    <string name="main_settings_detail">Adjust the app the way you like</string>
    <string name="main_about">About</string>
    <string name="main_about_details">More about the app</string>
    <string name="main_help">Help</string>
    <string name="main_help_details">Get help on how to use this app</string>
    <string name="main_contribute">Contribute</string>
    <string name="main_contribute_details">Help to make this app better</string>
    <string name="title_activity_books">BooksActivity</string>

    <!-- Books selection page -->
    <string name="books_Title">Books</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
